tests/ui/type-alias-impl-trait/hkl_forbidden3.stderr
error[E0792]: expected generic lifetime parameter, found `'a`
  --> $DIR/hkl_forbidden3.rs:11:5
   |
LL | type Opaque<'a> = impl Sized + 'a;
   |             -- this generic parameter must be used with a generic lifetime parameter
...
LL |     foo
   |     ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
